_product.scss: correction-product-image-no-padding fixed margin and padding on mobile

--- a/assets/css/store/_product.scss
+++ b/assets/css/store/_product.scss
@@ -109,9 +109,21 @@
 }
 
 @include media-breakpoint-down(xs) {
+  // Place this on a "col-" element
   .correction-product-image-no-padding {
     padding-left: 0;
     padding-right: 0;
+
+    &>.row {
+      margin-right: 0;
+      margin-left: 0;
+
+      &> .col,
+      &> [class*="col-"] {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
   }
 }
 
