--- a/assets/css/store/store-theme.scss
+++ b/assets/css/store/store-theme.scss
@@ -18,6 +18,7 @@
   stroke-width: 3px;
   --layer1: currentColor;
   --layer2: currentColor;
+  margin-bottom: 5px;
 }
 
 .text-xs {
